# RobustGaSP

./: .gitmodules  CMakeLists.txt  setup.py
interface/: models.py
py/: models.py
src/: pybind_functions.cpp
tests/: test_log_profile_lik.py  test_minimizer.py  test_rgasp_fit.py
